// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space should render correct with children 1`] = `
<div
  class="ant-space"
>
  <span
    style="margin-right:8px"
  >
    text1
  </span>
  <span
    style="margin-right:8px"
  >
    text1
  </span>
  <span>
    text3
  </span>
</div>
`;

exports[`Space should render width ConfigProvider 1`] = `
Array [
  <div
    class="ant-space"
  >
    <span
      style="margin-right:24px"
    >
      1
    </span>
    <span>
      2
    </span>
  </div>,
  <div
    class="ant-space"
  >
    <span
      style="margin-right:16px"
    >
      1
    </span>
    <span>
      2
    </span>
  </div>,
  <div
    class="ant-space"
  >
    <span
      style="margin-right:24px"
    >
      1
    </span>
    <span>
      2
    </span>
  </div>,
]
`;
